hphp/test/quick/static_clsmethod.php.expectf
bool(true)
string(1) "C"
bool(true)
string(1) "D"
**************
bool(true)
string(1) "C"
bool(true)
string(1) "D"
**************
bool(false)
string(1) "C"
bool(false)
string(1) "D"
**************
bool(false)
string(1) "C"
bool(false)
string(1) "D"
**************
bool(true)
string(1) "D"
bool(true)
string(1) "D"
bool(false)
string(1) "D"
bool(false)
string(1) "C"
**************

Fatal error: Cannot access static:: when no class scope is active in %s on line 55
